styles(overflow x&y): force change the default css styles of both overflow x & y of redered abcjs svg output to scroll for former & hidden for latter propel the defafault horizontal overflow property avoiding it to either exceeds out of the max screen size nor hide the div element to be automatically clipped when flowing outside of the viewport

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -37,3 +37,7 @@ textarea {
   font-weight: normal;
   font-style: normal;
 }
+
+.render-abc {
+  overflow-y: hidden;
+}
